# gold-cartridge

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  button.cpp  button.h  colors.cpp  colors.h  globals.cpp  globals.h  main.cpp  sdl2_loading.cpp  sdl2_loading.h  sdl2_testing.cpp  sdl2_testing.h  sdl2_usage.cpp  sdl2_usage.h  test_application.cpp  test_application.h  test_asserts.cpp  test_asserts.h  test_logging.cpp  test_logging.h
core/: FontManager.cpp  FontManager.h  SDL_System.cpp  SDL_System.h  System.cpp
rendering/: Colors.cpp  Colors.h  Windowing.cpp  Windowing.h
